# sim-airdrop

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py  config.py  data_generation.py  data_prep.py  helpers.py  logger.py  main.py  simulation.py  strategies.py  validation.py  visualization.py
src/tests/: test_data_generation.py  test_helpers.py  test_simulation.py
